<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".Results">

    <TextView
        android:id="@+id/ch2_results"
        android:layout_width="183dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/ch2_results"
        android:textColor="@color/red"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/ch3_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ch3_results"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/ch3_results"
        android:textColor="@color/red"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="208dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:text="@string/results"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ch1_results"
        android:layout_width="177dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/ch1_results"
        android:textColor="@color/red"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/ch2_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="88dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/comp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/green" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="320dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inprog_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        app:srcCompat="@color/red" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="88dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/notcomp_text"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/orange" />

    <TextView
        android:id="@+id/inprog_text"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginBottom="320dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="10dp"
        android:fontFamily="casual"
        android:text="@string/not_attempted"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/notcomp_text"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="128dp"
        android:layout_marginStart="10dp"
        android:fontFamily="casual"
        android:text="@string/in_progress"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inprog_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

    <TextView
        android:id="@+id/comp_text"
        android:layout_width="119dp"
        android:layout_height="38dp"
        android:layout_marginEnd="132dp"
        android:layout_marginStart="10dp"
        android:fontFamily="casual"
        android:text="@string/completed"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/notcomp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

</android.support.constraint.ConstraintLayout>